Enhance configuration file to include development mode and detailed logger settings for improved logging capabilities.

--- a/product-microservice/config/config.yaml
+++ b/product-microservice/config/config.yaml
@@ -1,3 +1,9 @@
 AppVersion: 1.0.0
 Server:
   Port: :5555
+  Development: true
+Logger:
+  DisableCaller: false
+  DisableStackTrace: false
+  Encoding: json
+  Level: info
