Update Makefile to include proto target for generating gRPC code from product.proto

--- a/product-microservice/Makefile
+++ b/product-microservice/Makefile
@@ -1,4 +1,4 @@
-.PHONY: local
+.PHONY: local proto
 
 local:
 	echo "Starting local docker compose"
@@ -9,3 +9,6 @@ FILES := $(shell docker ps -aq)
 down-local:
 	docker stop $(FILES)
 	docker rm $(FILES)
+
+proto:
+	protoc --go_out=./proto/product --go-grpc_out=./proto/product --proto_path=./proto proto/product/product.proto
