Fix Dockerfile by removing redundant 'add' in apk command for installing ca-certificates

--- a/product-microservice/Dockerfile
+++ b/product-microservice/Dockerfile
@@ -28,7 +28,7 @@ RUN cp /build/service .
 
 # Step 2 build a small image
 FROM alpine:latest
-RUN apk add --no-cache add ca-certificates
+RUN apk add --no-cache ca-certificates
 
 # Copy binary from /dist into our base image
 COPY --from=builder /dist/service .
