Add dependencies for monitoring and tracing in Docker Compose configuration, including Redis, Prometheus, Node Exporter, Grafana, and Jaeger.

--- a/product-microservice/docker-compose.yaml
+++ b/product-microservice/docker-compose.yaml
@@ -10,6 +10,12 @@ services:
     environment:
       - PORT=5555
     restart: always
+    depends_on:
+      - redis
+      - prometheus
+      - node-exporter
+      - grafana
+      - jaeger
   redis:
     image: redis:8.4.0-alpine
     container_name: product_microservice_redis
