Update Jaeger host configuration and add MongoDB connection details to the config file for improved service integration and database access.

--- a/product-microservice/config/config.yaml
+++ b/product-microservice/config/config.yaml
@@ -13,9 +13,14 @@ Logger:
   Encoding: json
   Level: info
 Jaeger:
-  Host: localhost:6831
+  Host: jaeger:6831
   ServiceName: products_microservice
   LogSpans: false
 Metrics:
   URL: 0.0.0.0:7071
   ServiceName: products_microservice
+MongoDB:
+  URI: mongodb://mongodb:27017
+  User: "admin"
+  Password: "admin"
+  DB: "products"
