Add Metrics Port configuration to config.yaml for enhanced metrics monitoring

--- a/product-microservice/config/config.yaml
+++ b/product-microservice/config/config.yaml
@@ -17,6 +17,7 @@ Jaeger:
   ServiceName: products_microservice
   LogSpans: false
 Metrics:
+  Port: :7070
   URL: 0.0.0.0:7071
   ServiceName: products_microservice
 MongoDB:
