Add Kafka configuration to config.yaml, specifying broker addresses for improved messaging capabilities in the product microservice.

--- a/product-microservice/config/config.yaml
+++ b/product-microservice/config/config.yaml
@@ -25,3 +25,7 @@ MongoDB:
   User: "admin"
   Password: "admin"
   DB: "products"
+Kafka:
+  Broker1: kafka1:19091
+  Broker2: kafka2:19092
+  Broker3: kafka3:19093
