--- a/product-microservice/Makefile
+++ b/product-microservice/Makefile
@@ -2,6 +2,8 @@
 
 local:
 	echo "Starting local docker compose"
+	mkdir -p data/kafka1/data data/kafka2/data data/kafka3/data
+	sudo chown -R $(shell id -u):$(shell id -g) data/
 	docker compose -f docker-compose.yaml up -d --build
 
 FILES := $(shell docker ps -aq)
@@ -14,4 +16,9 @@ proto:
 	protoc --go_out=./proto/product --go-grpc_out=./proto/product --proto_path=./proto proto/product/product.proto
 
 create_topic:
-	docker exec -it kafka1 kafka-topics --bootstrap-server kafka1:19091 --create --topic products --partitions 3 --replication-factor 2
+	docker exec -it kafka1 kafka-topics --bootstrap-server kafka1:19091 --create --topic create_product --partitions 3 --replication-factor 2
+	docker exec -it kafka1 kafka-topics --bootstrap-server kafka1:19091 --create --topic update_product --partitions 3 --replication-factor 2
+
+down:
+	rm -rf data/kafka1/data data/kafka2/data data/kafka3/data
+	docker compose -f docker-compose.yaml down -v
