Refactor Kafka broker configuration in config.yaml to use a single Brokers array for improved readability and maintainability.

--- a/product-microservice/config/config.yaml
+++ b/product-microservice/config/config.yaml
@@ -26,6 +26,4 @@ MongoDB:
   Password: "admin"
   DB: "products"
 Kafka:
-  Broker1: kafka1:19091
-  Broker2: kafka2:19092
-  Broker3: kafka3:19093
+  Brokers: ["kafka1:19091", "kafka2:19092", "kafka3:19093"]
