Update docker-compose configuration to use Dockerfile.dev for development environment. This change aligns the setup with the latest development practices for the product microservice.

--- a/product-microservice/docker-compose.yaml
+++ b/product-microservice/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     container_name: product_microservice
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - 5555:5555
       - 5007:5007
