Add HttpConfig struct and update config.yaml for HTTP settings
This commit introduces a new HttpConfig struct in config.go to manage HTTP-related configurations, including port settings and timeouts. The config.yaml file is updated accordingly to include these new settings, enhancing the configurability of the product microservice.

--- a/product-microservice/config/config.yaml
+++ b/product-microservice/config/config.yaml
@@ -27,3 +27,11 @@ MongoDB:
   DB: "products"
 Kafka:
   Brokers: ["kafka1:19091", "kafka2:19092", "kafka3:19093"]
+Http:
+  Port: :5007
+  PprofPort: :8100
+  ReadTimeout: 5
+  WriteTimeout: 5
+  Timeout: 15
+  CookieLifetime: 44640
+  SessionCookieName: "session_token"
