Add Redis configuration to product microservice
This commit introduces a new RedisConfig struct in config.go, defining parameters for Redis connection settings. Additionally, the config.yaml file is updated to include default Redis configuration values, enhancing the microservice's capability to integrate with Redis for caching and data storage.

--- a/product-microservice/config/config.yaml
+++ b/product-microservice/config/config.yaml
@@ -35,3 +35,13 @@ Http:
   Timeout: 15
   CookieLifetime: 44640
   SessionCookieName: "session_token"
+Redis:
+  RedisAddr: "redis:6379"
+  RedisPassword:
+  RedisDB: 0
+  RedisDefaultDB: 0
+  MinIdleConns: 200
+  PoolSize: 12000
+  PoolTimeout: 240
+  Password: ""
+  DB: 0
